# Selective_soldering

./: CMakeLists.txt  fileParser.c  fileParser.h  inspectionCamera.cpp  inspectionCamera.h  main.cpp  motorController.cpp  motorController.h  threadqueue.c  threadqueue.h
csvparser/: csvparser.h  usage_example.c
